force-app/main/default/objects/History__c/History__c.object-meta.xml
<CustomObject>
    <label>History</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>