force-app/main/default/objects/History__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Task Title</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Technical Detail</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Dependency Type</fullName>
            </value>
            <value>
                <fullName>Schedule Start</fullName>
            </value>
            <value>
                <fullName>Schedule End</fullName>
            </value>
            <value>
                <fullName>Warning Zone</fullName>
            </value>
            <value>
                <fullName>BAU Impact</fullName>
            </value>
            <value>
                <fullName>RAG status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>