force-app/main/default/objects/History__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>