force-app/main/default/objects/History__c/fields/SOE__c.field-meta.xml
<CustomField>
    <fullName>SOE__c</fullName>
    <label>SOE</label>
    <referenceTo>SOE__c</referenceTo>
    <relationshipLabel>User History</relationshipLabel>
    <relationshipName>Audits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>